--- a/main/sidenavUpload.html
+++ b/main/sidenavUpload.html
@@ -1,4 +1,4 @@
-<div class="rounded-pill base pill" id="btnMyCalc" style="top: 50vh; left: calc(100vw - 3.5rem); background-color: var(--BaseColor); z-index: 9983;">
+<div class="rounded-pill base pill" id="btnMyUp" >
 
     <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="var(--AccentColor)" class="bi bi-file-earmark-plus" viewBox="0 0 16 16" id="btnFile">
         <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
