--- a/index.html
+++ b/index.html
@@ -236,18 +236,26 @@
             var array = Array.from(document.getElementsByClassName('traduzir')).concat(Array.from(document.getElementsByClassName('traduzirPlaceholder')));
             traducao(array, traducaoPtBr());
             data = dataPtBr();
+            document.getElementById('outraLista').innerHTML = '';
+            criaListaCompleta(data);
         }">
         <label for="flagMx" class="traduzir" hidden>México</label>
         <img id="flagMx" class="noCopy" src="./src/mx.svg" onclick="{
             var array = Array.from(document.getElementsByClassName('traduzir')).concat(Array.from(document.getElementsByClassName('traduzirPlaceholder')));
             traducao(array, traducaoSpMx());
             data = dataSpMx();
+
+            document.getElementById('outraLista').innerHTML = '';
+            criaListaCompleta(data);
         }">
         <label for="flagUs" class="traduzir" hidden>Estados Unidos da América</label>
         <img id="flagUs" class="noCopy" src="./src/us.svg" onclick="{
             var array = Array.from(document.getElementsByClassName('traduzir')).concat(Array.from(document.getElementsByClassName('traduzirPlaceholder')));
             traducao(array, traducaoEnUs());
             data = dataEnUs();
+
+            document.getElementById('outraLista').innerHTML = '';
+            criaListaCompleta(data);
         }">
     </div>
 
@@ -275,29 +283,29 @@
             }
 
         </script>
-    <div>
-        <label for="searchBar" hidden class="traduzir">Barra de pesquisa para fórmulas</label>
-        <input type="text" id="searchBar" placeholder="Pesquisar..." class="traduzirPlaceholder">
-            <!-- when clicking, the fisrt result should be selected -->
-            <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16" id="lupa" onclick="{pesquisa($('#searchBar').val())}">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-            </svg>
-            <script>
-                $('#searchBar').on('keydown', function(event){
-                    if (event.which == '13') {
-                        pesquisa($('#searchBar').val());
-                    }
-                });
-            </script>
-            <ul id="lista" class="absolute"></ul>
-    </div>
+    <label for="searchBar" hidden class="traduzir">Barra de pesquisa para fórmulas</label>
+    <input type="text" id="searchBar" placeholder="Pesquisar..." class="traduzirPlaceholder">
+        <!-- when clicking, the fisrt result should be selected -->
+        <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16" id="lupa" onclick="{pesquisa($('#searchBar').val())}">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+        <script>
+            $('#searchBar').on('keydown', function(event){
+                if (event.which == '13') {
+                    pesquisa($('#searchBar').val());
+                }
+            });
+        </script>
+        <ul id="lista" class="absolute"></ul>
     
     <div id="BTNoutraLista">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list outraListaIcon noCopy" viewBox="0 0 16 16" onclick="abreLista(abertoLista); abertoLista = !abertoLista;">
             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
         </svg>
-        <div id="divOutraLista">
-            <ul id="outraLista" class="noCopy"></ul>
+        <div id="divOutraLista" style="display: none;">
+            <div class="DivOutraListaBoogaloo">
+                <ul id="outraLista" class="noCopy"></ul>
+            </div>
         </div>
         
     </div>
