concluído implementação da lista

--- a/index.html
+++ b/index.html
@@ -119,25 +119,19 @@
                 <!-- div eraser -->
                 <div>
                     <!-- empty -->
-                    <svg id="eraserMT" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-eraser eraser index7" viewBox="0 0 16 16" onmousedown="{
-                        document.getElementById('eraserMT').style.opacity = '0';
-                        document.getElementById('eraserFull').style.opacity = '1';
-                        document.getElementById('eraserFull').style.zIndex = '7';
-                        document.getElementById('eraserMT').style.zIndex = '6';
+                    <svg id="eraserMT" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-eraser eraser" viewBox="0 0 16 16" onmousedown="{
+                        document.getElementById('eraserMT').style.display = 'none';
+                        document.getElementById('eraserFull').style.display = 'initial';
 
-                        document.getElementById('penMT').style.opacity = '1';
-                        document.getElementById('penFull').style.opacity = '0';
-                        document.getElementById('penFull').style.zIndex = '6';
-                        document.getElementById('penMT').style.zIndex = '7';
+                        document.getElementById('penMT').style.display = 'initial';
+                        document.getElementById('penFull').style.display = 'none';
                     }">
                         <path d="M8.086 2.207a2 2 0 0 1 2.828 0l3.879 3.879a2 2 0 0 1 0 2.828l-5.5 5.5A2 2 0 0 1 7.879 15H5.12a2 2 0 0 1-1.414-.586l-2.5-2.5a2 2 0 0 1 0-2.828l6.879-6.879zm2.121.707a1 1 0 0 0-1.414 0L4.16 7.547l5.293 5.293 4.633-4.633a1 1 0 0 0 0-1.414l-3.879-3.879zM8.746 13.547 3.453 8.254 1.914 9.793a1 1 0 0 0 0 1.414l2.5 2.5a1 1 0 0 0 .707.293H7.88a1 1 0 0 0 .707-.293l.16-.16z"/>
                     </svg>
                     <!-- full -->
                     <svg id="eraserFull" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-eraser-fill eraser index6" viewBox="0 0 16 16" onmousedown="{
-                        document.getElementById('eraserMT').style.opacity = '1';
-                        document.getElementById('eraserFull').style.opacity = '0';
-                        document.getElementById('eraserFull').style.zIndex = '6';
-                        document.getElementById('eraserMT').style.zIndex = '7';
+                        document.getElementById('eraserMT').style.display = 'initial';
+                        document.getElementById('eraserFull').style.display = 'none';
                     }">
                         <path d="M8.086 2.207a2 2 0 0 1 2.828 0l3.879 3.879a2 2 0 0 1 0 2.828l-5.5 5.5A2 2 0 0 1 7.879 15H5.12a2 2 0 0 1-1.414-.586l-2.5-2.5a2 2 0 0 1 0-2.828l6.879-6.879zm.66 11.34L3.453 8.254 1.914 9.793a1 1 0 0 0 0 1.414l2.5 2.5a1 1 0 0 0 .707.293H7.88a1 1 0 0 0 .707-.293l.16-.16z"/>
                     </svg>
@@ -146,26 +140,20 @@
                 <!-- div pen -->
                 <div>
                     <!-- empty -->
-                    <svg id="penMT" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-pen pen index7" viewBox="0 0 16 16" onmousedown="{
-                        document.getElementById('penMT').style.opacity = '0';
-                        document.getElementById('penFull').style.opacity = '1';
-                        document.getElementById('penFull').style.zIndex = '7';
-                        document.getElementById('penMT').style.zIndex = '6';
+                    <svg id="penMT" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-pen pen index6" viewBox="0 0 16 16" onmousedown="{
+                        document.getElementById('penMT').style.display = 'none';
+                        document.getElementById('penFull').style.display = 'initial';
 
-                        document.getElementById('eraserMT').style.opacity = '1';
-                        document.getElementById('eraserFull').style.opacity = '0';
-                        document.getElementById('eraserFull').style.zIndex = '6';
-                        document.getElementById('eraserMT').style.zIndex = '7';
+                        document.getElementById('eraserMT').style.display = 'initial';
+                        document.getElementById('eraserFull').style.display = 'none';
                     }">
                         <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/> 
                     </svg>
                     <!-- full -->
-                    <svg id="penFull" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-pen-fill pen index6" viewBox="0 0 16 16"onmousedown="{
-                        document.getElementById('penMT').style.opacity = '1';
-                        document.getElementById('penFull').style.opacity = '0';
-                        document.getElementById('penFull').style.zIndex = '6';
-                        document.getElementById('penMT').style.zIndex = '7';
-                    }">
+                    <svg id="penFull" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="basic_instruments bi bi-pen-fill pen" viewBox="0 0 16 16"onmousedown="{
+                        document.getElementById('penMT').style.display = 'initial';
+                        document.getElementById('penFull').style.display = 'none';
+                    }" style="display: initial;">
                         <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z"/>
                     </svg>
                 </div>
@@ -263,7 +251,7 @@
         <!-- Linhas horizontais -->
         <div id="background"></div>
         <script>
-            criaBckgnd(200);
+            criaBckgnd(600);
 
             function pesquisa(meuQuery){
                 const query = meuQuery.toLowerCase().trim();
