--- a/main/header.html
+++ b/main/header.html
@@ -13,7 +13,10 @@
         }
     }" class="traduzir">Contato</button>
 
-    <div id="tema" onclick="mudaTema(dark); dark = !dark;">
+    <div id="tema" onclick="
+    mudaTema(dark); 
+    dark = !dark;    
+    ">
 
         <!-- moon -->
         <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
