arrumado o tema dark, consertado BUG MALDITO + outra coisa n lembro

--- a/main/sidenavCalculadora.html
+++ b/main/sidenavCalculadora.html
@@ -1,6 +1,6 @@
 <label for="btnMyCalc" class="traduzir" hidden>calculadora</label>
 <div class="rounded-pill base pill" id="btnMyCalc" onmousedown='openCalc()'>
-    <svg xmlns="https://www.w3.org/2000/svg" id="btnCalc" width="16" height="16" fill="var(--AccentColor)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
+    <svg xmlns="https://www.w3.org/2000/svg" id="btnCalc" width="16" height="16" fill="var(--AccentColorExtra)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
     </svg>
 </div>
@@ -95,7 +95,7 @@
         <div id="otherCorner"></div>
         <div id="myExtra">
             <div class="openExtra" onmousedown="openExtra()">
-                <svg id="rotate" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="var(--RealDarkBlue)" class="bi bi-chevron-compact-left chevronExtra" viewBox="0 0 16 16">
+                <svg id="rotate" xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="var(--RealDarkBlueCalc)" class="bi bi-chevron-compact-left chevronExtra" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                 </svg>
             </div>
