--- a/index.html
+++ b/index.html
@@ -89,16 +89,6 @@
 
     <script src="./JS/checkTouch.js"></script>
 
-    <script>
-        document.getElementById('BTNAlerta').firstElementChild.innerHTML = "Ei, só para avisar. Esse site tem um bug interessante onde se vc fizer um loop com as fórmulas vc crasha o navegador. O nosso time está trabalhando duro para consertar o problema, por enquanto só tome cuidado.";
-        document.getElementById('BTNAlerta').style.display = "initial";
-        setTimeout(() => {
-        document.getElementById('BTNAlerta').firstElementChild.innerHTML = "Copiado!";
-        document.getElementById('BTNAlerta').style.display = "none";
-        }, 2000);
-        
-    </script>
-
     <div id="whereHeader" class="nocopy"></div>
     <div id="whereSidenavC" class="nocopy"></div>
     <div id="whereSidenavU" class="nocopy"></div>
@@ -288,7 +278,7 @@
     
     <div id="BTNoutraLista">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list outraListaIcon noCopy" viewBox="0 0 16 16" onclick="abreLista(abertoLista); abertoLista = !abertoLista;">
-            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            <path class="filler" fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
         </svg>
         <div id="divOutraLista" style="display: none;">
             <div class="DivOutraListaBoogaloo">
