--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Formoflow: Esboços Matemáticos Dinâmicos</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+
 
     <!--Link bootstrap, jquery & CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
