removed class noCopy, added user-select: none to all elements of html

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
     <script src="./JS/checkTouch.js"></script>
 
-    <div id="whereHeader" class="nocopy"></div>
-    <div id="whereSidenavC" class="nocopy"></div>
-    <div id="whereSidenavU" class="nocopy"></div>
+    <div id="whereHeader" class="noCopy"></div>
+    <div id="whereSidenavC" class="noCopy"></div>
+    <div id="whereSidenavU" class="noCopy"></div>
 
     <!-- basicamente eu tive que incluir a sidenav de desenho no index pq o JS depende do canvas criado aqui, 
     e o JS estava sendo chamado primeiro -->
-    <div id="whereSidenavD" class="nocopy">
+    <div id="whereSidenavD" class="noCopy">
         <label for="btnMyDraw" class="traduzir" hidden>Área de desenho</label>
         <div class="rounded-pill base pill" id="btnMyDraw" onmousedown='openDraw()'>
             <svg xmlns="https://www.w3.org/2000/svg" id="btnDraw" width="16" height="16" fill="var(--BaseColor)" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
@@ -312,7 +312,7 @@
         
     </div>
 
-    <div id="whereFooter" class="nocopy">
+    <div id="whereFooter" class="noCopy">
         <div id="contato">
             <p class="contato traduzir">CONTATO</p>
             <br>
