implementado código para mais de dois temas

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
     </script>
 
     <script>
-        var isSet = false;
-        var dark = false;
-        dark = !dark; // falso = tema claro; verdadeiro = tema escuro;
+        var bringContato = false;
         var abertoLista = false;
+        
+        var dark = 1; // 1 = tema claro; 2 = tema escuro;
+        
     </script>
 
     <script>
