--- a/index.html
+++ b/index.html
@@ -309,6 +309,15 @@
             document.getElementById("draggablediv1").style.color = "var(--textColorWindow)";
             document.getElementById("draggablediv1").style.fontWeight = "bold";
 
+            $("#draggablediv1").on("mousedown", function () {
+                    setTimeout(() => {mudaTema(2)}, 500);
+                    setTimeout(() => {mudaTema(3)}, 500);
+                    setTimeout(() => {mudaTema(4)}, 500);
+                    setTimeout(() => {mudaTema(5)}, 500);
+                    setTimeout(() => {mudaTema(1)}, 500);
+                
+            });
+
         }, 0);
     </script>
         
