stopped the thingy to change colors

--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
             document.getElementById("draggablediv1").style.color = "var(--textColorWindow)";
             document.getElementById("draggablediv1").style.fontWeight = "bold";
 
-            $("#draggablediv1").on("mousedown", function () {
-                    setTimeout(() => {mudaTema(2)}, 500);
-                    setTimeout(() => {mudaTema(3)}, 1000);
-                    setTimeout(() => {mudaTema(4)}, 1500);
-                    setTimeout(() => {mudaTema(5)}, 2000);
-                    setTimeout(() => {mudaTema(1)}, 2500);
+            // $("#draggablediv1").on("mousedown", function () {
+            //         setTimeout(() => {mudaTema(2)}, 500);
+            //         setTimeout(() => {mudaTema(3)}, 1000);
+            //         setTimeout(() => {mudaTema(4)}, 1500);
+            //         setTimeout(() => {mudaTema(5)}, 2000);
+            //         setTimeout(() => {mudaTema(1)}, 2500);
                 
-            });
+            // });
 
         }, 0);
     </script>
