implementado um slider p dark e light mode

--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
 
     <div id="whereFooter" class="noCopy">
         <div id="contato">
-            <p class="contato traduzir">CONTATO</p>
+            <p class="contato traduzir NVMdoCopy">CONTATO</p>
             <br>
-            <p class="traduzir">Elogios? <a href="mailto:contato@formoflow.com.br" class="contato">contato@formoflow.com.br</a></p>
-            <p class="traduzir">Dúvidas? <a href="mailto:suporte@formoflow.com.br" class="contato">suporte@formoflow.com.br</a></p>
-            <p class="traduzir">SAC: <a href="mailto:sac@formoflow.com.br" class="contato">sac@formoflow.com.br</a></p>
-            <p class="contato">© Otávio Custódio Zampar</p>
+            <p class="traduzir NVMdoCopy">Elogios? <a href="mailto:contato@formoflow.com.br" class="contato">contato@formoflow.com.br</a></p>
+            <p class="traduzir NVMdoCopy">Dúvidas? <a href="mailto:suporte@formoflow.com.br" class="contato">suporte@formoflow.com.br</a></p>
+            <p class="traduzir NVMdoCopy">SAC: <a href="mailto:sac@formoflow.com.br" class="contato">sac@formoflow.com.br</a></p>
+            <p class="contato NVMdoCopy">© Otávio Custódio Zampar</p>
             <div id="github">
                 <a href="https://github.com/otavio-zampar" rel="noopener" class="noCopy"><img src="./src/github-mark.svg"></a>
                 <a href="https://github.com/otavio-zampar" rel="noopener" class="noCopy"><img src="./src/github-mark-white.svg"></a>
