cool new update, you can edit colors

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         var bringContato = false;
         var abertoLista = false;
         
+
+        var hc = 3;
         var dark = 1; // 1 = tema claro; 2 = tema escuro; 3 = tema vermelho e preto;
         
     </script>
