--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             $('#whereHeader').load("./main/header.html");
             $('#whereSidenavC').load("./main/sidenavCalculadora.html");
             $('#whereSidenavU').load("./main/sidenavUpload.html");
+
+            console.log(window.location.href);
         });
         
     </script>
