salvar com o console saveAll

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         criaListaCompleta(data);
 
         createEntradaDiv({option: "TUTORIAL", form: "textarea", qnt: 0, exit: 0});
-        const texo = "Bem vindo ao FORMOFLOW!\nPara utilizar números não decimais siga o padrão:\nDecimal: 15,\nBinário: 0b1111,\nOctal: 0o17,\nHexadecimal: 0xF."; 
+        const texo = "Bem vindo ao FORMOFLOW!\nPara utilizar números não decimais siga o padrão:\nDecimal: 15,\nBinário: 0b1111,\nOctal: 0o17,\nHexadecimal: 0xF.\n\tPara exportar as janelas, use a função saveAll() no console"; 
         setTimeout(() => {
             document.getElementById("input11").value = texo;
             document.getElementById("input11").style.fontSize = "1rem";
