--- a/main/sidenavCalculadora.html
+++ b/main/sidenavCalculadora.html
@@ -21,25 +21,25 @@
         <div class="grid-container divNumeros">
             <label for="btn1" hidden>1</label>    
             <input id="btn1" type="button" value="1" class="grid-item-number" onmousedown="document.calculator.ans.value+='1'; f = 0; ">
-            <label for="btn2" hidden>1</label>        
+            <label for="btn2" hidden>2</label>        
             <input id="btn2" type="button" value="2" class="grid-item-number" onmousedown="document.calculator.ans.value+='2'; f = 0; ">
-            <label for="btn3" hidden>1</label>     
+            <label for="btn3" hidden>3</label>     
             <input id="btn3" type="button" value="3" class="grid-item-number" onmousedown="document.calculator.ans.value+='3'; f = 0; ">
-            <label for="btn4" hidden>1</label>    
+            <label for="btn4" hidden>4</label>    
             <input id="btn4" type="button" value="4" class="grid-item-number" onmousedown="document.calculator.ans.value+='4'; f = 0; ">
-            <label for="btn5" hidden>1</label>    
+            <label for="btn5" hidden>5</label>    
             <input id="btn5" type="button" value="5" class="grid-item-number" onmousedown="document.calculator.ans.value+='5'; f = 0; ">
-            <label for="btn6" hidden>1</label>    
+            <label for="btn6" hidden>6</label>    
             <input id="btn6" type="button" value="6" class="grid-item-number" onmousedown="document.calculator.ans.value+='6'; f = 0; ">
-            <label for="btn7" hidden>1</label>    
+            <label for="btn7" hidden>7</label>    
             <input id="btn7" type="button" value="7" class="grid-item-number" onmousedown="document.calculator.ans.value+='7'; f = 0; ">
-            <label for="btn8" hidden>1</label>    
+            <label for="btn8" hidden>8</label>    
             <input id="btn8" type="button" value="8" class="grid-item-number" onmousedown="document.calculator.ans.value+='8'; f = 0; ">
-            <label for="btn9" hidden>1</label>    
+            <label for="btn9" hidden>9</label>    
             <input id="btn9" type="button" value="9" class="grid-item-number" onmousedown="document.calculator.ans.value+='9'; f = 0; ">
-            <label for="btn0" hidden>1</label>    
+            <label for="btn0" hidden>0</label>    
             <input id="btn0" type="button" value="0" class="grid-item-number" onmousedown="document.calculator.ans.value+='0'; f = 0; ">
-            <label for="btnPoint" hidden>1</label>    
+            <label for="btnPoint" hidden>.</label>    
             <input id="btnPoint" type="button" value="." class="grid-item-number" onmousedown="{
                     if(i == 0){
                         document.calculator.ans.value+='.';
